<resources>
    <string name="title_activity_layout_10">Layout_10</string>
    <string name="judul_app">Foodsy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cart">cart</string>
    <string name="restaurant">" Restaurant Nearby"</string>
    <string name="nav_home">Home</string>
    <string name="nav_order">My Orders</string>
    <string name="nav_notif">Notifications</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_logout">Log Out</string>
    <string name="nav_daerah">Depok, Jawa Barat</string>
    <string name="list_name1">Raja Burger Depok</string>
    <string name="list_namk1">Burger</string>
    <string name="list_nam2">Kebab Jaman Now</string>
    <string name="list_namk2">Kebab</string>
    <string name="list_nam3">Pizza Kekinian</string>
    <string name="list_namk3">Pizza</string>
    <string name="list_nam4">Mie Ayam Depok</string>
    <string name="list_namk4">Mie Ayam</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_nam5">Nasi Goreng Pak Gendut</string>
    <string name="list_namk5">Nasi Goreng</string>
    <string name="list_nam6">Siomay Saus Peanut</string>
    <string name="list_namk6">Siomay</string>
    <string name="list_nam7">Soto Kuah Cinta</string>
    <string name="list_namk7">Soto</string>

    <string name="menu_choose">Wayback Burger</string>
    <string name="menu_choose2">Chicken Burger</string>
    <string name="menu_choose3">Big Tomato Burger</string>
    <string name="wayback_details">Classic old school burger with 2 paddys, letuce, and cheddar cheese</string>
    <string name="add_order">Add to Cart</string>
    <string name="wayback_price">$12</string>
    <string name="bacon_price">$14</string>
    <string name="tomato_price">$10</string>
    <string name="back_menu">Back</string>
    <string name="number">1</string>
    <string name="remove">Min</string>
    <string name="add">Add</string>
    <string name="total">Total</string>
    <string name="order_process">Order Confirmation</string>

    <string name="address_detail1">Street</string>
    <string name="address_detail2">City</string>
    <string name="address_detail3">Zip Code</string>
    <string name="address_detail4">Phone Number</string>

    <string name="payment_detail1">Name</string>
    <string name="payment_detail2">Card Number</string>
    <string name="payment_detail3">Date</string>
    <string name="payment_detail4">CCV</string>

    <string name="pay_det">Payment Details</string>
    <string name="delivery">Delivery Details</string>
    <string name="process1">Process Order</string>
    <string name="process2">Process to Payment</string>
    <string name="process3">Pay Order</string>
    <string name="home">Home Address</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="list_txt1"><b>Wayback Burger</b></string>
    <string name="list_txtk1">Classic old school burger with 2 paddys, lettuce and cheddar cheese</string>
    <string name="list_mon1"><b>$12</b></string>
    <string name="list_txt2"><b>Big Tomato Burger</b></string>
    <string name="list_txtk2">Single paddy burger with lettuce and a thich slice of spanish tomato</string>
    <string name="list_mon2"><b>$10</b></string>
    <string name="list_txt3"><b>Chicken Burger</b></string>
    <string name="list_txtk3">Burger with paddy made from premium quality chicken and organic vegetables</string>
    <string name="list_mon3"><b>$14</b></string>
    <string name="order">"Your Order"</string>
    <string name="tot_rev"><b>23 Reviews</b></string>
    <string name="name_1"><b>Sara Espinosa Garcia</b></string>
    <string name="date_1">July 20th, 2017</string>
    <string name="rev_1">Now this is what I call a burger place! Amazing food carefully prepared with the best quality ingredients around.</string>
    <string name="name_2"><b>Jose Maria Penardi</b></string>
    <string name="date_2">June 19th, 2016</string>
    <string name="rev_2">This place is good but I feel that the meat is sometimes overcooked. It might be my own taste but overall it\'s still good.</string>
    <string name="name_3"><b>Ramsey Gordon</b></string>
    <string name="date_3">May 20th, 2016</string>
    <string name="rev_3">The taste is .... I can\'t tell with any word. It taste so amazing and I recommend this to all of you.</string>


    <string name="app_name">Food</string>
    <string name="in"><b>SIGN IN</b></string>
    <string name="up"><b>SIGN UP</b></string>
    <string name="descript"><b>foodry</b></string>
    <string name="user">USERNAME</string>
    <string name="email">EMAIL ADDRESS</string>
    <string name="pw">PASSWORD</string>
    <string name="confirm">CONFIRM PASSWORD</string>
    <string name="or"><b>OR</b></string>
    <string name="fb">CONNECT WITH FACEBOOK</string>
    <string name="twitter">CONNECT WITH TWITTER</string>
    <string name="send">SEND PASSWORD</string>
    <string name="forgot"><b><u>Forgot Password? click here</u></b></string>
    <string name="hhh"><b>FORGOT YOUR PASSWORD?</b></string>
    <string name="hfft">Enter your email below to receive the instructions to reset your password</string>
    <string name="regist"><b>REGISTER NOW</b></string>
    <string name="login">LOG IN</string>
    <string name="futsi"><b>Find Your Favourite Food In One Click</b></string>
    <string name="xx"><b>X</b></string>
    <string name="ready_1">Ready in 25Min</string>
    <string name="ready_2">Ready in 35Min</string>
    <string name="ready_3">Ready in 15Min</string>
    <string name="ready_4">Ready in 40Min</string>
    <string name="detail">"Raja Burger Depok located in Politeknik Negeri Jakarta. Founded in 2015 by 5 PNJ students. Wayback Burger is the most delicious burger from this cafe."</string>
    <string name="title_activity_maps">Map</string>

        <string name="search">Search Restaurant</string>
        <string name="find">FIND RESTAURANTS</string>

        <string name="title_activity_welcome">Home Screen</string>
        <string name="next">NEXT</string>
        <string name="skip">SKIP</string>
        <string name="start">GOT IT</string>

        <string name="slide_1_title"><b>Eat from the best restaurant</b></string>
        <string name="slide_1_desc">Access all the best restaurants around you and enjoy their cuisine at home </string>

        <string name="slide_2_title"><b>Choose the food you love</b></string>
        <string name="slide_2_desc">Our delivery service offers you a wide range of fresh meals prepared at the moment </string>

        <string name="slide_3_title"><b>Sit back, dinner is on the way</b></string>
        <string name="slide_3_desc">Get ready and comfortable while our bikers bring your meal at your door </string>

        <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
        <string name="play_again">Play Again</string>


</resources>
