<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/nav_order"
            android:title="@string/nav_order" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/nav_notif"
            android:title="@string/nav_notif" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/nav_setting"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/nav_logout"
            android:title="@string/nav_logout" />
    </group>
    <item
        android:title="@string/nav_daerah">
    </item>

</menu>
