<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sahabatpnj.layout_foodies.layout2">

    <ImageView
        android:id="@+id/panah"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:src="@drawable/ic_keyboard_backspace" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/regist"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/panah"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@drawable/buttonwhite"
        android:text="@string/user"
        android:textColor="#817f7f" />

    <Button
        android:id="@+id/imel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonwhite"
        android:text="@string/email"
        android:textColor="#817f7f" />

    <Button
        android:id="@+id/pww"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imel"
        android:layout_alignStart="@+id/imel"
        android:layout_below="@+id/imel"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonwhite"
        android:text="@string/pw"
        android:textColor="#817f7f" />

    <Button
        android:id="@+id/konfirm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pww"
        android:layout_alignStart="@+id/pww"
        android:layout_below="@+id/pww"
        android:layout_marginTop="14dp"
        android:background="@drawable/buttonwhite"
        android:text="@string/confirm"
        android:textColor="#817f7f" />

    <Button
        android:id="@+id/konf"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/konfirm"
        android:layout_alignStart="@+id/konfirm"
        android:layout_below="@+id/konfirm"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonijo"
        android:text="@string/up"
        android:textColor="#FFFFFF"
        android:textSize="17sp"/>

    <TextView

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/konf"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/or"
        android:textColor="#000000"
        android:textSize="19sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@drawable/buttonfb"
        android:text="@string/fb" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="13dp"
        android:background="@drawable/buttontwitter"
        android:text="@string/twitter" />


</RelativeLayout>
