<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spnj.tugasfoodsy.Layout03">

    <ImageView
        android:id="@+id/panahh"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/see"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:src="@drawable/ic_keyboard_backspace" />

    <TextView

        android:id="@+id/see"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/in"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/button4"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/panahh"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/buttonwhite"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#817f7f" />

    <EditText
        android:id="@+id/pwww"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonwhite"
        android:hint="@string/pw"
        android:inputType="textPassword"
        android:textColor="#817f7f" />

    <Button
        android:id="@+id/inn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fb"
        android:layout_alignStart="@+id/fb"
        android:layout_below="@+id/pwww"
        android:layout_marginTop="11dp"
        android:background="@drawable/buttonijo"
        android:text="@string/login" />

    <TextView
        android:id="@+id/klik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/forgot"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/klik"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/or"
        android:textColor="#000000" />

    <Button
        android:id="@+id/fb"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@drawable/buttonfb"
        android:text="@string/fb" />

    <Button
        android:id="@+id/twitt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fb"
        android:layout_alignStart="@+id/fb"
        android:layout_below="@+id/fb"
        android:layout_marginTop="12dp"
        android:background="@drawable/buttontwitter"
        android:text="@string/twitter" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/berger"
        android:layout_below="@id/twitt"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView3" />



</RelativeLayout>
