<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spnj.tugasfoodsy.layout_19Activity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp">
            <ImageButton
                android:contentDescription="@string/back_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_back_white_24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/delivery"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>

            <ImageButton
                android:contentDescription="@string/back_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:src="@drawable/shop_cart"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        android:paddingTop="30dp"
        android:paddingLeft="55dp"
        android:paddingRight="55dp">
        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@drawable/man2"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"/>
        <EditText
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#e5e5e5"
            android:hint="@string/address_detail1"
            android:gravity="center"/>
        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#e5e5e5"
            android:hint="@string/address_detail2"
            android:gravity="center"/>
        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#e5e5e5"
            android:hint="@string/address_detail3"
            android:gravity="center"/>
        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#e5e5e5"
            android:hint="@string/address_detail4"
            android:gravity="center"/>

    </LinearLayout>
    <Button
        android:id="@+id/buttonDelivery"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonround"
        android:text="@string/process2"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:onClick="delivery"/>

</RelativeLayout>
