<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spnj.tugasfoodsy.foodies">

    <ImageView
        android:id="@+id/fotopasta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tombolsignin"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/descript"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tombolsignin"
        android:layout_marginBottom="21dp"
        android:text="@string/futsi"
        android:textColor="#630800"
        android:textSize="20sp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/tombolsignin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:background="@drawable/buttonijo"
        android:text="@string/in"
        android:textColor="#ffffff"
        android:textSize="17sp" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tombolsignin"
        android:layout_alignParentBottom="true"
        android:textSize="17sp"
        android:layout_alignStart="@+id/tombolsignin"
        android:layout_marginBottom="38dp"
        android:background="@drawable/roundbuttonabu"
        android:text="@string/up"
        android:textColor="#ffffff" />



</RelativeLayout>
